--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <span class="line2"></span><br>
                     <span class="line3"></span>
                 </div>
+        <body>
 
             </section>
             <nav id="sideNav">
